Fix clock & rewrite index.xhtml

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -14,31 +14,15 @@
     <h:link href="main.css" rel="stylesheet"/>
 </h:head>
 
-<h:body styleClass="start" onload="createCalendar()">
+<h:body styleClass="start">
     <f:view>
         <center>
             <div class="header_1">
-                <table class="table_header_1">
-                    <tr>
-                        <td><label> Лаборатоная работа №3.</label></td>
-                    </tr>
-                </table>
+                        Лаборатоная работа №3.
             </div>
             <div class="header_2">
-                <table class="table_header_2">
-                    <tr>
-                        <td></td>
-                        <td>Группа: P3202</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>Вариант: 84183</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>Выполнил: Зайцев Артем Алексеевич</td>
-                    </tr>
-                </table>
+                       Группа: P3202 Вариант: 84183 <br/>
+                       Выполнил: Зайцев Артем Алексеевич
             </div>
 
 
@@ -62,11 +46,11 @@
             </h:form>
             <br/>
 
-            <div id="clockAndCalendar">
+            <div>
                 <table id="startTable">
                     <tr>
                         <td>
-                            <div id="clock"/>
+                            <div id="clock"></div>
                         </td>
                     </tr>
                 </table>
