--- a/web/main.xhtml
+++ b/web/main.xhtml
@@ -33,16 +33,11 @@
             <div class="header_2">
                 <table class="table_header_2">
                     <tr>
-                        <td/>
                         <td>Группа: P3202</td>
+                        <td>Вариант: 84183</td>
                     </tr>
                     <tr>
-                        <td/>
-                        <td>Вариант: 851108</td>
-                    </tr>
-                    <tr>
-                        <td/>
-                        <td>Выполнил: Куркин Павел Петрович</td>
+                        <td>Выполнил: Зайцев Артем Алексеевич</td>
                     </tr>
                 </table>
             </div>
