--- a/web/main.xhtml
+++ b/web/main.xhtml
@@ -16,30 +16,17 @@
 <h:head>
     <title>Lab_3</title>
     <h:outputStylesheet library="styles" name="main.css"/>
-    <link rel="stylesheet" href="resources/styles/main.css" type="text/css"/>
     <h:outputScript library="scripts" name="draw.js"/>
 </h:head>
 
-<h:body styleClass="main">
+<h:body styleClass="start">
     <f:view>
         <center>
             <div class="header_1">
-                <table class="table_header_1">
-                    <tr>
-                        <td><label> Лаборатоная работа №3.</label></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="header_2">
-                <table class="table_header_2">
-                    <tr>
-                        <td>Группа: P3202</td>
-                        <td>Вариант: 84183</td>
-                    </tr>
-                    <tr>
-                        <td>Выполнил: Зайцев Артем Алексеевич</td>
-                    </tr>
-                </table>
+                Лаборатоная работа №3.<br/>
+                Группа: P3202 Вариант: 84183 <br/>
+                Выполнил: <br/>
+                Зайцев Артем Алексеевич
             </div>
             <br/>
             <div class="container form" id="inputs">
@@ -53,7 +40,7 @@
                                         <td><label id="choose"> Выбор значений:</label></td>
                                     </tr>
                                     <tr>
-                                        <td id="rowX">
+                                        <!--<td id="rowX">
                                             <h:outputLabel class="label" value="&#8226; Координата X: "/>
                                             <h:outputText class="x_input" id="X_buttion" value="#{pointBean.x}"/>
                                             <br/>
@@ -84,7 +71,7 @@
                                             <h:commandButton class="input_X" value="3" type="submit">
                                                 <f:setPropertyActionListener target="#{pointBean.x}" value="3"/>
                                             </h:commandButton>
-                                        </td>
+                                        </td>-->
                                         <td style="width: 100px !important;"/>
                                         <td>
                                             <p:outputPanel id="graphPanel">
@@ -98,27 +85,35 @@
                                                         </pattern>
                                                     </defs>
                                                     <polygon points="0,0 250,0 250,250 0,250" fill="url(#image)"/>
-                                                    <ui:repeat value="#{pointBean.points}" var="point" id="points">
+                                                    <ui:repeat value="#{pointBean.graphPoints}" var="point" id="points">
                                                         <circle cx="#{100 / point.r * point.x + 125}"
                                                                 cy="#{250 - (100 / point.r * point.y + 125)}"
                                                                 stroke="black"
-                                                                fill="#{point.result eq true ? 'green' : 'red'}"
+                                                                fill="#{point.isInArea eq true ? 'green' : 'red'}"
                                                                 class="point" r="3"/>
                                                     </ui:repeat>
                                                 </svg>
 
                                                 <p:inputText type="hidden" id="hiddenX" value="#{pointBean.x}"/>
-                                                <p:inputText type="hidden" id="hiddenY" value="#{pointBean.hiddenY}"/>
+                                                <p:inputText type="hidden" id="hiddenY" value="#{pointBean.y}"/>
                                                 <h:commandButton style="display:none" update="graphPanel Y"
                                                                  id="areaClickBtn"
                                                                  action="#{pointBean.addPoint()}"/>
                                             </p:outputPanel>
                                         </td>
                                     </tr>
-
+                                    <tr>
+                                        <td>
+                                            <h:outputLabel styleClass="label" for="x" value="&#8226; Координата X: "/>
+                                            <h:outputText styleClass="label" id="X_buttion" value="#{pointBean.x}"/>
+                                                <p:inputText styleClass="label" id="x" value="#{pointBean.x}" onkeydown="return false;"/>
+                                                <p:slider styleClass="slide" for="x" minValue="-4" maxValue="4" step="1"
+                                                          target="#{pointBean.x}" onSlideEnd="document.getElementById('mainForm:hiddenBtn').click()"/>
+                                        </td>
+                                    </tr>
                                     <tr>
                                         <td id="rowY">
-                                            <h:outputLabel class="label" value="&#8226; Координата Y: "/><br/>
+                                            <h:outputLabel styleClass="label" value="&#8226; Координата Y: "/><br/>
                                             <h:inputText styleClass="label" id="Y" maxlength="5" value="#{pointBean.y}">
                                                 <f:validator validatorId="yValidator"/>
                                             </h:inputText>
@@ -127,16 +122,40 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <h:outputLabel class="label" value="&#8226; Радиус R: "/>
+                                           <!--<h:outputLabel class="label" value="&#8226; Радиус R: "/>
                                             <h:outputText style="display: none" class="input_R" id="R_text"
                                                           value="#{pointBean.r}"/>
                                             <br/>
-                                            <h:commandLink value="#{pointBean.r}">
+                                            <h:selectOneMenu value="#{pointBean.r}">
                                                 <f:selectItem itemValue="1" itemLabel="1"/>
                                                 <f:selectItem itemValue="2" itemLabel="2"/>
                                                 <f:selectItem itemValue="3" itemLabel="3"/>
                                                 <f:selectItem itemValue="4" itemLabel="4"/>
                                                 <f:selectItem itemValue="5" itemLabel="5"/>
+                                                <f:ajax render="graphPanel R_text"/>
+                                            </h:selectOneMenu>-->
+                                           <h:outputLabel class="label" value="&#8226; Радиус R: "/>
+                                            <h:outputText class="input_R" id="R_text"
+                                                          value="#{pointBean.r}"/>
+                                            <br/>
+                                            <h:commandLink styleClass="box" value="1">
+                                                <f:setPropertyActionListener target="#{pointBean.r}" value="1"/>
+                                                <f:ajax render="graphPanel R_text"/>
+                                            </h:commandLink>&nbsp;
+                                            <h:commandLink styleClass="box" value="2">
+                                                <f:setPropertyActionListener target="#{pointBean.r}" value="2"/>
+                                                <f:ajax render="graphPanel R_text"/>
+                                            </h:commandLink>&nbsp;
+                                            <h:commandLink styleClass="box" value="3">
+                                                <f:setPropertyActionListener target="#{pointBean.r}" value="3"/>
+                                                <f:ajax render="graphPanel R_text"/>
+                                            </h:commandLink>&nbsp;
+                                            <h:commandLink styleClass="box" value="4">
+                                                <f:setPropertyActionListener target="#{pointBean.r}" value="4"/>
+                                                <f:ajax render="graphPanel R_text"/>
+                                            </h:commandLink>&nbsp;
+                                            <h:commandLink styleClass="box" value="5">
+                                                <f:setPropertyActionListener target="#{pointBean.r}" value="5"/>
                                                 <f:ajax render="graphPanel R_text"/>
                                             </h:commandLink>
                                         </td>
@@ -167,7 +186,7 @@
             </div>
 
             <div id="history" class="container">
-                <p:dataTable id="resultsTable" class="input_table" value="#{pointBean.points}"
+                <p:dataTable id="resultsTable" class="input_table" value="#{pointBean.getUserFromContext().points}"
                              var="elem">
 
                     <p:column headerText="X">
@@ -183,7 +202,7 @@
                     </p:column>
 
                     <p:column headerText="IsInArea">
-                        <h:outputText value="#{elem.result}"/>
+                        <h:outputText value="#{elem.isInArea}"/>
                     </p:column>
 
                 </p:dataTable>
